--- a/style.css
+++ b/style.css
@@ -29,31 +29,40 @@ body{
     margin: auto;
     margin-top:100px;
     background-color:  hsl(244, 38%, 16%);   
-    min-height: 400px;
 }
-img{
-    height:100%;
-    width: 50%;
-}
+
 h1{
     font-size: 24px;
     color:hsl(0, 0%, 100%);
 }
 #content{
-    padding:0 0 0 10vh;
+    padding: 0 10vh 0 10vh;
+    object-fit: contain;
+    overflow: hidden;
 
 }
 #content p{
     color: hsla(0, 0%, 100%, 0.75);
 }
+
 #stat{
+    overflow:visible;
     display:flex;
-    margin-right: 10px;
+    flex-wrap:wrap;
+    width: max-content;
 
 }
 #stat p{
     color:hsla(0, 0%, 100%, 0.6);
     margin-right: 10vh;
+}
+#img{
+    background-color: hsl(277, 64%, 61%, 0.3);
+    z-index: 2;
+}
+#img img{
+    max-width: 450px;
+    width: 45%;
 }
 footer{
     position: absolute;
