--- a/style.css
+++ b/style.css
@@ -5,11 +5,6 @@ body{
     margin:0;
     padding: 0;
 
-    min-height: 100vh;
-    display:flex;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
 }
 
 .violet{
@@ -23,11 +18,10 @@ body{
 #main{
     font-family: "Inter";
     display:flex;
+    max-width: 1000px;
+    min-width: 300px;
     width:70%;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    margin-top:100px;
+    margin:10% auto;
     background-color:  hsl(244, 38%, 16%);   
 }
 
@@ -36,7 +30,7 @@ h1{
     color:hsl(0, 0%, 100%);
 }
 #content{
-    padding: 0 10vh 0 10vh;
+    padding: 5% 10% 0 10%;
     object-fit: contain;
     overflow: hidden;
 
@@ -56,14 +50,13 @@ h1{
     color:hsla(0, 0%, 100%, 0.6);
     margin-right: 10vh;
 }
-#img{
-    background-color: hsl(277, 64%, 61%, 0.3);
-    z-index: 2;
-}
-#img img{
+img{
     max-width: 450px;
     width: 45%;
+    opacity:0.6;
+    background-color: hsl(277, 64%, 61%);
 }
+
 footer{
     position: absolute;
     bottom: 0;
