--- a/style.css
+++ b/style.css
@@ -1,64 +1,95 @@
-body{
-    background-color:  hsl(233, 47%, 7%);
-    font-size: 15px;
-    color: hsl(0, 0%, 100%);
-    margin:0;
+body {
+  background-color: hsl(233, 47%, 7%);
+  font-size: 0.8rem;
+  color: hsl(0, 0%, 100%);
+  margin: 0;
+  padding: 0;
+}
+
+.violet {
+  color: hsl(277, 64%, 61%);
+}
+.bold {
+  font-weight: bold;
+  font-size: 1rem;
+  color: hsl(0, 0%, 100%);
+}
+#main {
+  font-family: "Inter";
+  display: flex;
+  width: 60%;
+  min-height: 5rem;
+  margin:auto;
+  margin-top: 10%;
+  background-color: hsl(244, 38%, 16%);
+}
+
+h1 {
+  font-size: 1.2rem;
+  color: hsl(0, 0%, 100%);
+}
+#content {
+  padding: 1rem 1.5rem 0rem 1.5rem;
+}
+#content p {
+  color: hsla(0, 0%, 100%, 0.75);
+  padding: 1rem 0.2rem 0.5rem 0.2rem;
+}
+#stat {
+  display: flex;
+  flex-wrap: wrap;
+}
+#stat p {
+  color: hsla(0, 0%, 100%, 0.6);
+  margin-right: auto;
+}
+img {
+  width: 100%;
+  height: 100%;
+  opacity: 0.7;
+  min-height: 7rem;
+}
+#img {
+  background-color: hsl(277, 100%, 43%);
+  width: 50rem;
+  min-height: 7rem;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: auto;
+}
+
+@media screen and (max-width: 750px) {
+  #main {
+    flex-direction: column-reverse;
+    width: 80%;
+    margin: 10% auto;
+    background-color: hsl(244, 38%, 16%);
+  }
+  #img {
+    background-color: hsl(277, 100%, 43%);
+    width: 100%;
+  }
+  #content {
+    padding: 1% 5% 1% 5%;
+  }
+  #content p {
     padding: 0;
-
-}
-
-.violet{
-    color:hsl(277, 64%, 61%);
-}
-.bold{
-    font-weight: bold;
-    font-size: 17px;
-    color:hsl(0, 0%, 100%);
-}
-#main{
-    font-family: "Inter";
-    display:flex;
-    max-width: 1000px;
-    min-width: 300px;
-    width:70%;
-    margin:10% auto;
-    background-color:  hsl(244, 38%, 16%);   
-}
-
-h1{
-    font-size: 24px;
-    color:hsl(0, 0%, 100%);
-}
-#content{
-    padding: 5% 10% 0 10%;
-    object-fit: contain;
-    overflow: hidden;
-
-}
-#content p{
-    color: hsla(0, 0%, 100%, 0.75);
-}
-
-#stat{
-    overflow:visible;
-    display:flex;
-    flex-wrap:wrap;
-    width: max-content;
-
-}
-#stat p{
-    color:hsla(0, 0%, 100%, 0.6);
-    margin-right: 10vh;
-}
-img{
-    max-width: 450px;
-    width: 45%;
-    opacity:0.6;
-    background-color: hsl(277, 64%, 61%);
-}
-
-footer{
-    position: absolute;
+  }
+  #stat {
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+  }
+  #stat p {
+    width: 100%;
+    justify-content: center;
+    text-align: center;
+  }
+  footer {
+    position: relative;
     bottom: 0;
-    margin-bottom: auto;
+  }
 }
